# SuperspySimulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  buildpackage_clean.sh  buildpackage_dev.sh
Platformer/: AABB.h  Attack.cpp  Attack.h  Bestiary.cpp  Bestiary.h  Bonus.h  CharacterSelect.cpp  CharacterSelect.h  CollisionMap.cpp  Customizer.cpp  Customizer.h  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  Event.cpp  Event.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  Helpers.cpp  Helpers.h  InputMapper.cpp  InputMapper.h  Items.h  Level.cpp  Level.h  LevelSelect.cpp  LevelSelect.h  MainMenu.cpp  MainMenu.h  MovingPlatform.cpp  MovingPlatform.h  MultiPlatformAbstraction.cpp  MultiPlatformAbstraction.hpp  Platformer.cpp  Platformer.h  Player.cpp  Player.h  (+19 more)
Platformer/Assets/Data/Collision/: TutorialCollision.plCOL
Platformer/Assets/Data/Event/: TutorialEvent.plEVT
Platformer/Assets/Data/Master/: TutorialMaster.plMST
Platformer/Assets/Data/Render/: TutorialTile.plTLM
